Revert "Fix #7724: DataTable: components can't overflow in editable cells (#7726)"
This reverts commit c5cd3f3693825480692951327d08a99a59a7c16f.

--- a/primefaces/src/main/resources/META-INF/resources/primefaces/datatable/datatable.css
+++ b/primefaces/src/main/resources/META-INF/resources/primefaces/datatable/datatable.css
@@ -198,7 +198,6 @@
     padding-bottom:0;
     margin-top:0;
     margin-bottom:0;
-    overflow: visible;
 }
 
 .ui-row-editor-outline {
